Sun Aug 23 18:33:42 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: make xdelta not built by default, so poor users
	aren't confused

	* plug-ins/depthmerge.c
	* plug-ins/fli.[ch]
	* plug-ins/gfli.c: updates from the registry

	* plug-ins/pnm/pnm.c: fix for non-interactive mode

	* plug-ins/fractaltrace/fractaltrace.c
	* plug-ins/pagecurl/pagecurl.c: minor code cleanups

Fri Jul 31 10:11:54 PDT 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/psd/psd.c: sync with 1.1 (but turn debugging off)

Thu Jul 23 10:30:12 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/fileops.c: tell the PDB that gimp_register_magic_load_handler
	takes 4 args

Wed Jul 22 23:32:50 MEST 1998 Sven Neumann <sven@gimp.org>

	* docs/quick_reference.ps
	* docs/quick_reference.tar.gz: 
	Updated the Quick Reference Sheet to the much improved version made 
	by Sven Anders <anderss@fmi.uni-passau.de>.

Fri Jul 17 01:37:21 PDT 1998 Manish Singh <yosh@gimp.org>

        * gimptool.in: Added --cflags-noui and --libs-noui flags and
        appropriate sed junk to craft it. Don't call gtk-config unless
        GTK_CONFIG is set; hard code the info. Strip out redundant
        stuff from the output. Made usage printout more verbose, added
        --quiet and -n options

        * gimp.m4: set NOUI stuff if available

        * libgimp/gimp.h
        * libgimp/gimpimage.c: make gimp_image_flatten return a value
        to be consistent with the PDB

Wed Jul 15 23:01:14 PDT 1998 Manish Singh <yosh@gimp.org>

	* acconfig.h
	* configure.in
	* app/about_dialog.c
	* app/app_procs.c
	* app/main.c
	* libgimp/gimp.[ch]
	* libgimp/gimpfeatures.h.in: added features header

Mon Jul 13 23:15:15 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: check for inline by ourselves if it's not
	defined in glibconfig.h. So inline works if glib is compiled
	with a different compiler than gimp. The plug-ins that use
	inline #include "config.h" now (blur, destripe, emboss,